2007-06-16  Alex Roitman  <shura@gramps-project.org>
	* src/ArgHandler.py: Use sys.exit() for bailing out.
	* src/GrampsDb/_ReadXML.py (start_url): Correctly parse url type;
	Use sys.ext() for bailing out.

2007-06-16  Brian Pepple  <bpepple@fedoraproject.org>
	* data/gramps.desktop.in: Fix desktop file to conform to desktop
	file specs.

2007-06-16  Alex Roitman  <shura@gramps-project.org>
	* src/Filters/Rules/Person/_IsChildOfFilterMatch.py
	(IsChildOfFilterMatch): Subclass MatchesFilter.
	* src/Filters/Rules/Person/_IsAncestorOfFilterMatch.py
	(IsAncestorOfFilterMatch): Subclass MatchesFilter.
	* src/Filters/Rules/Person/_IsDescendantOfFilterMatch.py
	(IsDescendantOfFilterMatch): Subclass MatchesFilter.
	* src/Filters/Rules/Person/_HasCommonAncestorWithFilterMatch.py
	(HasCommonAncestorWithFilterMatch): Subclass MatchesFilter.
	* src/Filters/Rules/Person/_IsParentOfFilterMatch.py
	(IsParentOfFilterMatch): Subclass MatchesFilter.
	* src/Filters/Rules/Person/_IsSiblingOfFilterMatch.py
	(IsSiblingOfFilterMatch): Subclass MatchesFilter.
	* src/Filters/Rules/Person/_IsSpouseOfFilterMatch.py
	(IsSpouseOfFilterMatch): Subclass MatchesFilter.

2007-06-14  Brian Matherly  <brian@gramps-project.org>
	* src/docgen/SvgDrawDoc.py: improve text rendering (#0001072)

2007-06-01  Alex Roitman  <shura@gramps-project.org>
	* data/grampsxml.rng: Add callname.
	* data/grampsxml.dtd: Add callname.
	* src/FilterEditor/_FilterEditor.py (check_recursive_filters,
	clean_after_rename, _do_delete_filter,_do_delete_selected_filter):
	Handle renaming and deletion of filters when other filters depend
	on them.
	* src/FilterEditor/_EditFilter.py (filter_name_changed): Prohibit
	creating new filter names colliding with existing filter names;
	(on_ok_clicked): Signal the name change.
	* src/DisplayState.py (DisplayState.__signals__): Add new signal
	to indicate filter name change: necessary for renaming/removing
	filters based on the changed name.
